initial Angular files, with navbar

--- a/BattleSimNG/src/app/app.component.html
+++ b/BattleSimNG/src/app/app.component.html
@@ -1,1 +1,16 @@
-<h1>Welcome to {{title}}</h1>
+<nav class="navbar navbar-dark navbar-expand-sm" style="background-color: rgb(46, 212, 204);">
+  <div class="container">
+      <div class="navbar-nav">
+          <!-- <h3 class="nav-item nav-link"><a routerLink="about">About</a></h3> -->
+          <h3 class="nav-item nav-link"><a routerLink="home">Home</a></h3>
+          <h3 class="nav-item nav-link"><a routerLink="register">Register</a></h3>
+          <h3 class="nav-item nav-link"><a routerLink="login">Login</a></h3>
+          <h3 class="nav-item nav-link"><a routerLink="help">Help</a></h3>
+          <h3 class="nav-item nav-link"><a routerLink="myAccount">My Account</a></h3>
+      </div>
+    </div>
+  </nav>
+  <router-outlet></router-outlet>
+
+  
+  
