--- a/BattleSimNG/src/app/app.component.html
+++ b/BattleSimNG/src/app/app.component.html
@@ -5,6 +5,7 @@
           <h3 class="nav-item nav-link"><a routerLink="home">Home</a></h3>
           <h3 class="nav-item nav-link"><a routerLink="register">Register</a></h3>
           <h3 class="nav-item nav-link"><a routerLink="login">Login</a></h3>
+          <h3 class="nav-item nav-link"><a routerLink="battle">Battle</a></h3>
           <h3 class="nav-item nav-link"><a routerLink="help">Help</a></h3>
           <h3 class="nav-item nav-link"><a routerLink="myAccount">My Account</a></h3>
       </div>
