--- a/BattleSimNG/src/app/Components/battle/battle.component.html
+++ b/BattleSimNG/src/app/Components/battle/battle.component.html
@@ -45,13 +45,30 @@
         <div id="monsterImg">
             <img src="/assets/scarymonsters/scarymonster.png" />
         </div>
-        <div id="monsterHp" style="text-align: center;">
+        <!-- <div id="monsterHp" style="text-align: center;">
             <p>HP:{{MonsterHp}}</p>
+        </div> -->
+
+        <div style="text-align: center;">
+            <label for="file">MonsterHP:</label>
+            <progress id="file" [value]="MonsterHp" [max]="MonsterHp"> 32 </progress><br>
+            <label for="file">PlayerHP:</label>
+            <progress id="file" [value]="MaxHp" [max]="MaxHp"> 32 </progress><br>
+            <button type="button" class="btn btn-primary" (click) ="attackMonster()" >Attack</button>
+            <button type="button" class="btn btn-primary" (click) ="attackMonster()">Defend</button>
         </div>
     </div>
 
     <div class="flex-item">
-        <p>Future Chat Log</p>
+        <h1>Fight Log</h1>
+        <ul>
+            <li>waaa attacked</li>
+            <li>TheMegreganator attacked</li>
+            <li>waaa attacked</li>
+            <li>TheMegreganator attacked</li>
+            <li>waaa attacked</li>
+            <li>TheMegreganator attacked</li>
+        </ul>
 
 
     </div>
