Hourly push, added creature service functionality to battle page

--- a/BattleSimNG/src/app/Components/battle/battle.component.html
+++ b/BattleSimNG/src/app/Components/battle/battle.component.html
@@ -45,9 +45,9 @@
         <div id="monsterImg">
             <img src="/assets/scarymonsters/scarymonster.png" />
         </div>
-        <!-- <div id="monsterHp" style="text-align: center;">
+        <div id="monsterHp" style="text-align: center;">
             <p>HP:{{MonsterHp}}</p>
-        </div> -->
+        </div>
 
         <div style="text-align: center;">
             <div><label for="file">MonsterHP:</label>
