--- a/BattleSimNG/src/app/Components/battle/battle.component.css
+++ b/BattleSimNG/src/app/Components/battle/battle.component.css
@@ -9,12 +9,10 @@
 #monsterHp{
     clear: both;
 }
-ul{
-    font-size: 10px;
-}
+
 img{
     display: inline-block;
-    width: 100%;
+    width: 700px;
     border:10px black dashed;
 }
 .flex-container{
