--- a/BattleSimNG/src/app/Components/home/home.component.html
+++ b/BattleSimNG/src/app/Components/home/home.component.html
@@ -1,1 +1,5 @@
-<p>home works!</p>
+<div class = "container">
+
+<h1>Welcome to the Battle Simulator! Please create an account and a character!</h1>
+
+</div>
