--- a/BattleSimNG/src/app/Components/my-account/my-account.component.html
+++ b/BattleSimNG/src/app/Components/my-account/my-account.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark navbar-expand-sm" style="background-color: navy;">
+<nav class="navbar navbar-dark navbar-expand-sm" style="background-color: navy; display: none;">
   <div class="container">
       <div class="navbar-nav">
           <h4 (click)="showCC()" class="nav-item nav-link"><a routerLink="createCharacter">Create Character</a></h4>
