--- a/BattleSimNG/src/app/app.component.css
+++ b/BattleSimNG/src/app/app.component.css
@@ -1,5 +1,7 @@
+
 div{
     text-align: center;
+    
 }
 
 h3{
@@ -8,3 +10,35 @@ h3{
     margin: 5px;
     background-color: aliceblue;
 }
+
+.navedit{
+    border-radius: 7px;
+    color: white;
+    background-color: #1a1a1a;
+    border: 2px solid rgb(99, 98, 98);
+
+}
+
+.navcontainer{
+    
+  
+}
+
+.capsule{
+    /* background-color: rgb(255, 255, 255); */
+    /* font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
+    background-image: url("/assets/runescapebackgroundlogin.jpg");
+    background-repeat: no-repeat; 
+    background-size: contain;
+    position: static;
+    vertical-align: middle;
+    align-content: center;
+    margin:auto;
+    height: 850px;
+    bottom: 0px;
+}
+
+.compdiv{
+    color: white;
+}
+
