--- a/BattleSimNG/src/app/Components/login/login.component.html
+++ b/BattleSimNG/src/app/Components/login/login.component.html
@@ -10,7 +10,7 @@
       <label for="Password">Password:</label>
       <input class="form-control" type="password" id="Password">
       <br>
-      <button class="btn btn-primary float-center" id="Submit" (click)="loginUser()" >Submit</button>
+      <button class="btn btn-primary float-center" id="Submit" (click)="login()" >Submit</button>
   </form>
 
 </div>
